--- a/src/qt/forms/overviewpage.ui
+++ b/src/qt/forms/overviewpage.ui
@@ -526,7 +526,7 @@
            </layout>
           </item>
           <item>
-           <widget class="TransactionOverviewWidget" name="listTransactions">
+           <widget class="QListView" name="listTransactions">
             <property name="styleSheet">
              <string notr="true">QListView { background: transparent; }</string>
             </property>
@@ -539,14 +539,8 @@
             <property name="horizontalScrollBarPolicy">
              <enum>Qt::ScrollBarAlwaysOff</enum>
             </property>
-            <property name="sizeAdjustPolicy">
-             <enum>QAbstractScrollArea::AdjustToContents</enum>
-            </property>
             <property name="selectionMode">
              <enum>QAbstractItemView::NoSelection</enum>
-            </property>
-            <property name="uniformItemSizes">
-             <bool>true</bool>
             </property>
            </widget>
           </item>
@@ -572,13 +566,6 @@
    </item>
   </layout>
  </widget>
- <customwidgets>
-  <customwidget>
-   <class>TransactionOverviewWidget</class>
-   <extends>QListView</extends>
-   <header>qt/transactionoverviewwidget.h</header>
-  </customwidget>
- </customwidgets>
  <resources>
   <include location="../bitcoin.qrc"/>
  </resources>
